Knob: fix clipped outline on Safari

--- a/styles/essentials.css
+++ b/styles/essentials.css
@@ -666,6 +666,7 @@ body.aux-cursor-row-resize * {
   transform: translate3d(0, 0, 0);
   will-change: transform;
   cursor: pointer;
+  overflow: visible;
 }
 
 /* LABEL */
